# git-meld-index

./: .gitignore  COPYING  README.md  pyproject.toml  release.py  setup.py
.github/workflows/: main.yml
ci/: Dockerfile  Dockerfile.debian
doc/: git-meld-index.1  git-meld-index.txt
src/: git_meld_index.py  list_tree.py  test_git_meld_index.py
src/golden/assert_golden_file/: test_write_index_or_head  test_write_index_or_head_executable  test_write_index_or_head_in_progress_merge  test_write_index_or_head_in_progress_submodule  test_write_index_or_head_symlink  test_write_stageable_working_tree_subset  test_write_stageable_working_tree_subset_symlink
src/golden/test/melded/: cached  diff
src/golden/test/test_end_to_end/: cached
src/golden/test/unmelded/: cached  diff  untracked
src/golden/test_dirs/melded/: cached  diff
src/golden/test_dirs/test_end_to_end/: cached  diff
src/golden/test_dirs/unmelded/: cached  diff  untracked
